--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,53 +18,106 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/semiwhite"
+                app:cardCornerRadius="10dp"
+                android:elevation="10dp">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/fhximageprofil"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:cardCornerRadius="50dp">
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/imagedrink"/>
+                    </androidx.cardview.widget.CardView>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/fhximageprofil"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/be_vietnam_extrabold"
+                            android:text="Halo, Maulana!"
+                            android:textColor="@color/dark_blue"
+                            android:textSize="@dimen/hp.ukuranteksatas"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="+62181234567890"
+                            android:textSize="@dimen/hp.ukuranteksinfo"
+                            android:textColor="@color/black"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="variousra@gmail.com"
+                            android:textSize="@dimen/hp.ukuranteksinfo"/>
+                    </LinearLayout>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:backgroundTint="@color/white"
+                        app:cardCornerRadius="10dp"
+                        android:elevation="10dp">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:src="@drawable/settingicon"/>
+                    </androidx.cardview.widget.CardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:gravity="center"
                 android:fontFamily="@font/be_vietnam_extrabold"
-                android:text="Selamat Datang, Maulana!"
+                android:text="Apa yang ingin anda Makan/Minum?"
                 android:textColor="@color/dark_blue"
-                android:textSize="@dimen/hp.ukuranteksatas"
+                android:textSize="@dimen/hp.ukuranteksinfo"
                 android:textStyle="bold" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Apa yang ingin anda makan/minum?"
-                android:textColor="@color/dark_blue"
-                android:textSize="@dimen/hp.ukuranteksatas" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="horizontal">
-
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/hp.ukuraninputndankeranjang"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/searchgreyicon"
-                    android:drawablePadding="10dp"
-                    android:hint="Cari Menu"
-                    android:inputType="text"
-                    android:paddingLeft="5dp"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/dark_blue" />
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:backgroundTint="@color/dark_blue"
-                    app:cardCornerRadius="5dp">
-                    <ImageView
-                        android:layout_width="@dimen/hp.ukuraninputndankeranjang"
-                        android:layout_height="@dimen/hp.ukuraninputndankeranjang"
-                        android:padding="10dp"
-                        android:src="@drawable/bucketblueicon"/>
-                </androidx.cardview.widget.CardView>
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    app:boxBackgroundMode="outline"
+                    app:boxStrokeColor="@color/dark_blue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/fmakxinput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/searchgreyicon"
+                        android:drawablePadding="10dp"
+                        android:hint="Ketik nama menu..."
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/dark_blue"
+                        android:textSize="@dimen/lp.ukuranteksinput" />
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
         </LinearLayout>
         <ScrollView
@@ -78,7 +131,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/hp.marginlayoutjudul"
                     android:orientation="vertical">
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -91,7 +143,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:layout_marginTop="@dimen/fh.margintekssubjudul"
                             android:layout_marginBottom="@dimen/fh.margintekssubjudul"
-                            android:text="Makanan"
+                            android:text="Promo Hari Ini"
                             android:textSize="@dimen/fh.ukurantekssubjudul"
                             android:textStyle="bold"/>
                         <TextView
@@ -107,18 +159,22 @@
                             android:textColor="@color/light_blue"
                             android:textStyle="bold"/>
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/hpxrvmakanan"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/homepage_rvmakanan"/>
+                    <ScrollView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/hpxrvmakanan"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                            app:spanCount="1"
+                            tools:listitem="@layout/homepage_rvpromo"/>
+                    </ScrollView>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/hp.marginlayoutjudul"
                     android:orientation="vertical">
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -155,13 +211,6 @@
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:listitem="@layout/homepage_rvminuman"/>
                 </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:gravity="center"
-                    android:text="Copyright by Vincent A5"
-                    android:textColor="@color/black"/>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
