--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -72,6 +72,7 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Nama Lengkap"
+                        android:maxLength="20"
                         android:inputType="text"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
@@ -94,6 +95,7 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Alamat"
+                        android:maxLength="30"
                         android:inputType="text"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
@@ -116,6 +118,7 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Nomor Handphone"
+                        android:maxLength="13"
                         android:inputType="number"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
@@ -138,6 +141,7 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Username"
+                        android:maxLength="20"
                         android:inputType="textEmailAddress"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
@@ -149,14 +153,15 @@
                     android:layout_height="wrap_content"
                     app:passwordToggleEnabled="true"
                     android:layout_margin="10dp"
-                    app:passwordToggleTint="@color/teal_200">
+                    app:passwordToggleTint="@color/dark_blue">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/rpxpassword"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/lp.ukuranmarginbawahinput"
                         android:drawablePadding="10dp"
-                        android:drawableLeft="@drawable/passwordicon"
+                        android:drawableStart="@drawable/passwordicon"
                         android:hint="Password"
+                        android:maxLength="20"
                         android:inputType="textPassword"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
