--- a/app/src/main/res/layout/fragment_makanan.xml
+++ b/app/src/main/res/layout/fragment_makanan.xml
@@ -54,6 +54,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_height="wrap_content"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/dataxjudul"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"/>
+            <TextView
+                android:id="@+id/dataxdesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"/>
+            <TextView
+                android:id="@+id/dataxharga"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"/>
+        </LinearLayout>
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
