--- a/app/src/main/res/layout/homepage_rvmakanan.xml
+++ b/app/src/main/res/layout/homepage_rvmakanan.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginVertical="10dp"
+    android:layout_marginRight="10dp"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/hpr.ukurangambar"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:backgroundTint="@color/semiwhite"
         app:cardElevation="5dp"
         app:cardCornerRadius="10dp">
@@ -16,6 +17,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/hpximage"
                 android:layout_width="@dimen/hpr.ukurangambar"
                 android:layout_height="@dimen/hpr.ukurangambar"
                 android:src="@drawable/imagefood"
