--- a/app/src/main/res/layout/homepage_rvterakhir.xml
+++ b/app/src/main/res/layout/homepage_rvterakhir.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginVertical="10dp"
-    android:layout_marginRight="10dp"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginRight="10dp">
+
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/hpr.ukurangambar"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/semiwhite"
-        app:cardElevation="5dp"
+        android:elevation="5dp"
         app:cardCornerRadius="10dp">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,29 +23,32 @@
                 android:id="@+id/hpximage"
                 android:layout_width="@dimen/hpr.ukurangambar"
                 android:layout_height="@dimen/hpr.ukurangambar"
-                android:src="@drawable/imagedrink" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/imagefood2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/hpxjudul"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/hpr.panjanglayoutjudul"
                     android:text="Judul Menu yang dijual di dalam Angkringan"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/hpr.ukuranjudul"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/hpxharga"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/hpr.panjanglayoutharga"
                     android:layout_marginTop="5dp"
                     android:text="Rp. 10000"
-                    android:textSize="@dimen/hpr.ukuranharga"
-                    android:textColor="@color/red"/>
+                    android:textColor="@color/red"
+                    android:textSize="@dimen/hpr.ukuranharga" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
