--- a/app/src/main/res/layout/activity_main_interfaces.xml
+++ b/app/src/main/res/layout/activity_main_interfaces.xml
@@ -56,12 +56,37 @@
             android:id="@+id/interxhargamenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/interxdescmenu"
             app:layout_constraintStart_toStartOf="parent"
             android:text="Rp. 10000"
             android:textSize="@dimen/hp.ukuranteksinfo"
             android:textColor="@color/red"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/interxhargamenu"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Stok Tersedia : "
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textStyle="italic"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/interxstokmenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="100 "
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textStyle="bold|italic"
+                android:textColor="@color/black"/>
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -69,10 +94,19 @@
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="10dp"
         app:layout_constraintTop_toBottomOf="@id/interxconsmenu">
+        <View
+            android:id="@+id/interxline1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="#bdbdbd"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/interxline1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:text="Tentukan Jumlah :"
@@ -82,7 +116,8 @@
             android:id="@+id/interximageplus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/interxline1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:src="@drawable/imageplus"/>
@@ -91,7 +126,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/interxline1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/interximageplus"
             android:text="100"
@@ -103,10 +139,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/interxline1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/interxteksjumlah"
-            android:src="@drawable/imageplus"/>
+            android:src="@drawable/imagemin"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
