--- a/app/src/main/res/layout/homepage_rvterakhir.xml
+++ b/app/src/main/res/layout/homepage_rvterakhir.xml
@@ -25,30 +25,55 @@
                 android:layout_height="@dimen/hpr.ukurangambar"
                 android:scaleType="centerCrop"
                 android:src="@drawable/imagefood2" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:orientation="vertical">
-
                 <TextView
                     android:id="@+id/hpxjudul"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/hpr.panjanglayoutjudul"
                     android:text="Judul Menu yang dijual di dalam Angkringan"
-                    android:textColor="@color/black"
                     android:textSize="@dimen/hpr.ukuranjudul"
-                    android:textStyle="bold" />
-
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:id="@+id/hpxdesc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="0dp"
+                    android:textColor="@color/red"/>
                 <TextView
                     android:id="@+id/hpxharga"
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/hpr.panjanglayoutharga"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Rp. 10000"
-                    android:textColor="@color/red"
-                    android:textSize="@dimen/hpr.ukuranharga" />
+                    android:textSize="@dimen/hpr.ukuranharga"
+                    android:textColor="@color/red"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="10dp"
+                        android:text="Stok : "
+                        android:textSize="@dimen/hpr.ukuranjudul"
+                        android:textStyle="italic"
+                        android:textColor="@color/black"/>
+                    <TextView
+                        android:id="@+id/hpxstok"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="10dp"
+                        android:text="100"
+                        android:textSize="@dimen/hpr.ukuranjudul"
+                        android:textStyle="italic"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
