--- a/app/src/main/res/layout/homepage_rvpromo.xml
+++ b/app/src/main/res/layout/homepage_rvpromo.xml
@@ -1,21 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginVertical="10dp">
     <androidx.cardview.widget.CardView
         android:layout_width="360dp"
-        android:layout_height="240dp"
+        android:layout_height="270dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginRight="10dp"
         android:backgroundTint="@color/semiwhite"
         app:cardCornerRadius="10dp"
-        android:elevation="5dp">
-        <ImageView
+        android:elevation="15dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/contohpromo"
-            android:scaleType="centerCrop"/>
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="Judul Promo"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="360dp"
+                android:layout_height="240dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:backgroundTint="@color/semiwhite"
+                app:cardCornerRadius="10dp">
+                <ImageView
+                    android:id="@+id/fproximage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/contohpromo"
+                    android:scaleType="centerCrop"/>
+            </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
