--- a/app/src/main/res/layout/homepage_rvterakhir.xml
+++ b/app/src/main/res/layout/homepage_rvterakhir.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginVertical="10dp"
-    android:layout_marginRight="10dp">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/hpr.ukurangambar"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginRight="10dp"
         android:backgroundTint="@color/semiwhite"
         android:elevation="5dp"
         app:cardCornerRadius="10dp">
