--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -96,6 +96,12 @@
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
-            tools:listitem="@layout/homepage_rvminuman"/>
+            tools:listitem="@layout/homepage_rvmenu"/>
     </ScrollView>
+    <TextView
+        android:id="@+id/mainxtxtset"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
