--- a/app/src/main/res/layout/fragment_riwayat.xml
+++ b/app/src/main/res/layout/fragment_riwayat.xml
@@ -6,6 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     tools:context=".Fragments.RiwayatFragment">
+    <include layout="@layout/homepage_rvriwayat"
+        android:visibility="invisible"/>
     <LinearLayout
         android:id="@+id/friwxlinear"
         android:layout_width="match_parent"
@@ -57,6 +59,16 @@
                 android:textSize="@dimen/hp.ukuranteksinfo"
                 android:textColor="@color/dark_blue"/>
             <TextView
+                android:id="@+id/friwxbtnhapussemua"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="Hapus Semua"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textColor="@color/red"/>
+            <TextView
                 android:id="@+id/friwxbtnubah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,6 +78,16 @@
                 android:text="Ubah"
                 android:textSize="@dimen/hp.ukuranteksinfo"
                 android:textColor="@color/dark_blue"/>
+            <TextView
+                android:id="@+id/friwxbtnselesai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="8dp"
+                android:text="Selesai"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textColor="@color/dark_green"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
             android:layout_width="0dp"
