--- a/app/src/main/res/layout/homepage_rvmenu.xml
+++ b/app/src/main/res/layout/homepage_rvmenu.xml
@@ -27,14 +27,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/hpxjudul"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/hpr.panjanglayoutjudul"
                     android:text="Judul Menu yang dijual di dalam Angkringan"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/hpr.ukuranjudul"
                     android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:ellipsize="end"
+                    android:maxLines="3"/>
+
                 <TextView
                     android:id="@+id/hpxdesc"
                     android:layout_width="wrap_content"
